# atcoder-problems-adt-sync

./: .gitignore  LICENSE  README.md
.github/workflows/: batch-container.yml
backend/: Cargo.toml  README.md
backend/api/: .env.example  .env.lambda.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
backend/api/src/: constants.rs  error.rs  extractors.rs  handlers.rs  main.rs
backend/api/src/handlers/: ac_problem.rs
backend/atcoder_client/: Cargo.toml
backend/batch/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev
backend/batch/src/: client.rs  constants.rs  crawler.rs  dto.rs  lib.rs  service.rs
backend/batch/src/crawler/: contest.rs  submission.rs
backend/batch/src/dto/: adt_contest.rs  user_ac_problem.rs
backend/ddb_client/: Cargo.toml
backend/ddb_client/docs/: architecture.md
backend/ddb_client/src/: constants.rs  error.rs  lib.rs  models.rs  operations.rs  service.rs
backend/ddb_client/src/models/: adt_contest.rs  constants.rs  traits.rs  user_ac_problem.rs
backend/ddb_client/src/operations/: batch_get_user_ac_problems.rs  batch_write_contests.rs  batch_write_items.rs  get_all_contests.rs  get_contests.rs  get_latest_contest.rs  get_user_ac_problems.rs
wasm-extension/: .env.frontend.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
wasm-extension/extension/: background.js  content.js  manifest.json
wasm-extension/extension/js/: chrome_message.js  chrome_storage.js
wasm-extension/src/: background.rs  bindings.rs  content.rs  database.rs  lib.rs  log.rs  messages.rs  models.rs
wasm-extension/src/background/: api.rs  chrome_message.rs  database.rs  main.rs  use_case.rs
wasm-extension/src/background/api/: ac_problem.rs  client.rs  constants.rs
wasm-extension/src/background/chrome_message/: listener.rs
wasm-extension/src/background/database/: problem.rs
wasm-extension/src/background/use_case/: get_ac_problem_ids.rs
wasm-extension/src/bindings/: chrome_message.rs  chrome_storage.rs
wasm-extension/src/content/: chrome_message.rs  chrome_storage.rs  database.rs  main.rs  service.rs  ui.rs
wasm-extension/src/content/chrome_message/: get_ac_problem_ids.rs
wasm-extension/src/content/chrome_storage/: sync_enabled.rs
wasm-extension/src/content/database/: submission.rs  user.rs
wasm-extension/src/content/ui/: constants.rs  init.rs  refresh.rs  toggle.rs  toggle_observer.rs  url.rs  utils.rs  visibility.rs
(+10 files in other folders)
