[package]
name = "atcoder_problems_adt_sync"
description = "Chrome extension using Rust and WebAssembly to merge ADT submissions into AtCoder Problems"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["yiwiy9"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
gloo = { version = "0.11", features = ["timers", "futures"] }

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'DomException',
    'Event',
    'Window',
    'IdbFactory',
    'IdbOpenDbRequest',
    'IdbDatabase',
    'IdbObjectStore',
    'IdbObjectStoreParameters',
    'IdbTransaction',
    'IdbTransactionMode',
    'Document',
    'HtmlCollection',
    'Element',
    'HtmlInputElement',
    'HtmlLabelElement',
    'Location',
    'MutationObserver',
    'MutationObserverInit',
]
